--- a/FitApp/Base.lproj/Main.storyboard
+++ b/FitApp/Base.lproj/Main.storyboard
@@ -1865,7 +1865,7 @@
         <segue reference="WpM-BX-gR3"/>
         <segue reference="0jB-C5-61H"/>
         <segue reference="jlV-mS-ctL"/>
-        <segue reference="3VP-Qj-dHl"/>
+        <segue reference="m9y-bw-kVp"/>
         <segue reference="XSm-fu-tgS"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.3460007906" green="0.33548757429999998" blue="0.8400039077" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
