title and connection test

--- a/FitApp/Base.lproj/Main.storyboard
+++ b/FitApp/Base.lproj/Main.storyboard
@@ -1859,7 +1859,7 @@
         <image name="search" width="16" height="16"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="El6-bg-yGj"/>
+        <segue reference="bah-OF-6wG"/>
         <segue reference="sAu-Sz-2X7"/>
         <segue reference="WpM-BX-gR3"/>
         <segue reference="0jB-C5-61H"/>
